--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.2.0",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-slideshow-image": "^4.0.4",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.21.0",
